--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
     <meta charset="UTF-8">
     <!-- https://developer.mozilla.org/zh-CN/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>自动添加滚动框工具</title>
+    <title>多语言收集工具</title>
 </head>
 
 <body>
     <div id="div1" class="myDiv">
         打开多场景配置文件:
         <div id="pathButton"></div>
+        请选择Excel路径:
+        <div id="excelField"></div>
+        <div id="excelButton"></div>
+        请设置代码收集的前缀:
+        <div id="prefixField"></div>
         <div id="selectCanvas">
 
-        </div>
+        </div >
         <div id="stepButton"></div>
-        <div id="stepButton2"></div>
     </div>
     <div class="myDiv2" id="output"></div>
 </body>
@@ -25,3 +29,4 @@
 <!-- <script src="./renderer.js"></script> -->
 
 </html>
+
